--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ html, body {
 
 .topo {
   /* background-color: red; */
-  padding: 16px;
   font-size: 1em;
   font: normal 24px/36px Titillium Web;
   display: flex;   
@@ -44,6 +43,12 @@ html, body {
   margin: 0 auto;
   border: transparent;
   width: 160vh;
+  padding-top: 1.5rem;
+}
+
+.topo a {
+  text-decoration: underline; 
+  color: var(--grey);
 }
 
 .topo p {
@@ -54,6 +59,7 @@ html, body {
   font: normal 24px Titillium Web;
   letter-spacing: 0px;
   opacity: 1;
+  padding-bottom: 2%;
 }
 
 .filterDiv {
@@ -81,20 +87,17 @@ h2 {
 }
 
 .container {
-  margin-top: 20px;
   overflow: hidden;
   margin: 0 auto;
   width: 160vh;
-
 }
 
 /* Style the buttons */
 .btn {
   border: none;
   outline: none;
-  padding: 20px 30px; 
-  width: 220px;
-  height: 75px;
+  width: 12em;
+  height: 4em;
   margin-top: 10px;
   background-color: #f1f1f1;
   cursor: pointer;
@@ -107,6 +110,20 @@ h2 {
 .btn.active {
   background-color: #666;
   color: white;
+  border-color: pink;
+  border: 1px solid #707070;
+
+}
+
+.btn:not(.active) {
+  background-color: transparent;
+  border: 1px solid #707070;
+  color:var(--grey);
+}
+
+.selecao {
+  float: right;
+  transition: none;
 }
 
 /*Cores dos eixos*/
@@ -382,10 +399,13 @@ h2 {
 .flex-container {
   display: flex;
   justify-content: center;
-  flex-flow: column;
+  margin-left: 10%;
+
 }
 
-footer .flex-container > div {
+.flex-container > div {
+  width: 80%;
+  height: 70%;
   margin: 10px;
   text-align: center;
   line-height: 1.5;
@@ -393,22 +413,21 @@ footer .flex-container > div {
 }
 
 section > .container-artigo {
-  margin: 5em;
+  margin: 5rem;
+
   font-size: 93.75%;
 
 }
 
-section > .container-artigo a {
-  border:none;
-}
-
 footer {
+  width: 100%;
+  height: 40vh;
   background-color: var(--black);
   color: white;
   flex-wrap: wrap;
+  justify-content: space-between;
   padding-top: 5%;
-  padding-bottom: 5%;
-  font: normal 21px Titillium Web;
+  padding-bottom: 16%;
   font-size: 81.25%;
 }
 
@@ -425,7 +444,12 @@ footer img {
 footer .contatos {
   text-align: left;        
 }
-footer .endereco {
+footer .endereço {
   text-align: center;
 
+}
+
+.footer p{
+  text-align: center;
+  margin-left:30px;
 }
