--- a/css/style.css
+++ b/css/style.css
@@ -104,22 +104,25 @@ h2 {
 }
 
 .btn:hover {
-  background-color: #ddd;
+  padding: 10px 30px;
+  border: 1px solid #707070;
+  background-color: #666;
+  color: white;
+  transition: 0.4s ease-in-out;
 }
 
 .btn.active {
-  background-color: #666;
-  color: white;
-  border-color: pink;
-  border: 1px solid #707070;
+  background-color: #f1f1f1;
+  color: black;
+  border-color: #666;
 
 }
 
-.btn:not(.active) {
+/*.btn:not(.active) {
   background-color: transparent;
   border: 1px solid #707070;
   color:var(--grey);
-}
+}*/
 
 .selecao {
   float: right;
