--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ h2 {
  display: flex;
  flex-wrap: wrap;
  margin-left: 3%;
+ margin-bottom: 3%;
  width: 97%;
 
 }
@@ -519,8 +520,7 @@ p > .TipoPublicacao{
 .flex-container {
   display: flex;
   justify-content: center;
-  margin-left: 10%;
-
+  flex-flow: column;
 }
 
 .flex-container > div {
@@ -530,6 +530,12 @@ p > .TipoPublicacao{
   text-align: center;
   line-height: 1.5;
   font-size: 1em;
+}
+
+footer .flex-container > div {
+  margin: 10px;
+  text-align: center;
+  line-height: 1.5;
 }
 
 .video-responsive iframe {
@@ -545,14 +551,11 @@ section > .container-artigo {
 }
 
 footer {
-  width: 100%;
-  height: 40vh;
   background-color: var(--black);
   color: white;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding-top: 5%;
-  padding-bottom: 16%;
+  padding-bottom: 5%;
   font-size: 81.25%;
 }
 
